<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:enabled="true"
        android:icon="@drawable/ic_report_24dp"
        android:title="@string/title_reports" />

    <item
        android:id="@+id/navigation_search"
        android:enabled="true"
        android:icon="@drawable/ic_search_24dp"
        android:title="@string/title_search" />

    <item
        android:id="@+id/navigation_ai"
        android:enabled="true"
        android:icon="@drawable/ic_ai_24dp"
        android:title="@string/title_ai" />

    <item
        android:id="@+id/navigation_settings"
        android:enabled="true"
        android:icon="@drawable/ic_settings_24dp"
        android:title="@string/title_settings" />

</menu>