<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="unaeif411.delta.petmatch.view.petlist.PetListFragment"
        android:label="@string/title_petlist"
        tools:layout="@layout/fragment_petlist" />

    <fragment
        android:id="@+id/navigation_search"
        android:name="unaeif411.delta.petmatch.view.search.SearchFragment"
        android:label="@string/title_search"
        tools:layout="@layout/fragment_search" />

    <fragment
        android:id="@+id/navigation_ai"
        android:name="unaeif411.delta.petmatch.view.ai.AIFragment"
        android:label="@string/title_ai"
        tools:layout="@layout/fragment_ai" />

    <fragment
        android:id="@+id/navigation_settings"
        android:name="unaeif411.delta.petmatch.view.settings.SettingsFragment"
        android:label="@string/title_settings"
        tools:layout="@layout/fragment_settings" />
</navigation>