<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray"
    android:orientation="vertical"
    android:paddingLeft="16dp"
    android:paddingTop="16dp"
    android:paddingRight="16dp"
    android:paddingBottom="16dp"
    tools:context=".view.LoginActivity">

    <!--<ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="168dp"
        android:layout_marginTop="120dp"
        android:src="@drawable/task_new"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="27dp" />-->

    <TextView
        android:id="@+id/petMatchName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="30sp"
        android:layout_marginBottom="25sp"
        android:fontFamily="@font/syne_semibold"
        android:text="@string/app_name"
        android:textSize="48sp" />

    <EditText
        android:id="@+id/username"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:fontFamily="@font/red_hat_text"
        android:hint="@string/prompt_email"
        android:inputType="textEmailAddress"
        android:selectAllOnFocus="true"
        android:text="admin@guzmanalan.com"
        android:textColor="@color/gray_white" />

    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/red_hat_text"
        android:hint="@string/prompt_password"
        android:imeActionLabel="@string/action_sign_in_short"
        android:imeOptions="actionDone"
        android:inputType="textPassword"
        android:selectAllOnFocus="true"
        android:text="12345"
        android:textColor="@color/gray_white" />

    <Button
        android:id="@+id/login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="16dp"
        android:backgroundTint="@color/orange"
        android:enabled="false"
        android:fontFamily="@font/red_hat_text_medium"
        android:text="@string/action_sign_in"
        android:textColor="@color/gray" />

    <ProgressBar
        android:id="@+id/loading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="64dp"
        android:layout_marginBottom="64dp"
        android:progressTint="@color/blue"
        android:visibility="gone" />

</LinearLayout>